# sarvam-ai-md-tts-article-reader

./: README.md
eng_hi_speech/: .gitignore  README.md  run.ps1
eng_hi_speech/docs/: .example.md  API.md  ARCHITECTURE.md  README.md  SETUP.md
eng_hi_speech/pipeline/speech/: .gitkeep.md  test-simple.md
eng_hi_speech/pipeline/translate/hi/: artilce-1.md  artilce-1a.md  artilce-1b.md  test-simple.md
eng_hi_speech/src/backend/: .env.example  config.py  main.py  pyproject.toml  test_api.py
eng_hi_speech/src/backend/models/: __init__.py  schemas.py
eng_hi_speech/src/backend/services/: __init__.py  file_discovery.py  markdown_parser.py  tts_service.py
eng_hi_speech/src/backend/tests/: test_e2e.py
eng_hi_speech/src/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
eng_hi_speech/src/frontend/src/: App.tsx  index.css  theme.ts  types.ts
eng_hi_speech/src/frontend/src/components/: FileSelector.tsx  Header.tsx  LoadingOverlay.tsx  MarkdownViewer.tsx  SettingsPanel.tsx
eng_hi_speech/src/frontend/src/services/: api.ts
eng_hi_speech/src/frontend/src/store/: useAppStore.ts
eng_hi_speech/src/frontend/tests/: e2e.spec.ts
