[project]
name = "eng-hi-speech-backend"
version = "1.0.0"
description = "Text-to-Speech backend using Sarvam AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "sarvamai>=0.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "httpx>=0.26.0",
  "python-multipart>=0.0.6",
  "aiofiles>=23.2.1",
  "pydub>=0.25.1",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "sse-starlette>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
